--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
   },
   "homepage": "https://github.com/n3ruuu/todo-list#readme",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
